# causal_methodologies_analysis

./: EconML Case Study - Customer Segmentation at An Online Media Company.ipynb  EconML Case Study - Recommendation AB Testing at An Online Travel Company.ipynb  LICENSE  README.md  Simulation Analysis.R  Understanding Causal Trees.ipynb  blog-text-notebook.ipynb  causal_examples.py  pyproject.toml  requirements.txt
results/: simulations_results.csv
src/: data_preprocessing.py  data_processing.py  study.py  treatment.py
src/data/: data_filler.py  data_formatter.py  data_formatter2.py  experiment_setup.py  kaggle_datasets.py  load.py  preprocessing.py  random_experiment.py  utils.py
src/experiment/: study.py
src/experiments/: study.py
src/models/: MLPreprocessing.py  difference_in_differences_estimator.py  do_estimator.py  doubly_robust_estimator.py  preprocessing.py  slearner_estimator.py  synthetic_control.py  synthetic_control_estimator.py  tlearner_estimator.py
src/test/: test_data_formatter.py  test_data_kaggle_dataset.py  test_data_load.py  test_data_utils.py
src/test/data/: load_data.csv  load_data.ipc  load_data.json  load_data.xls
