[tool.poetry]
name = "causal-methodologies-analysis"
version = "0.1.0"
description = "This package uses multiple open-source packages in Python designed, or can be use, to analyse quasi-experiments. The analyst can use the package to benchmark the performance of these algorithms and packages on bias and coverage under different assumptions for the behaviour of the causal effect of the intervention."
authors = ["Raphael Tamaki <raphaeltamaki@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^1.2.0"
kaggle = "^1.6.14"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
